# ProposalAgent

./: .env  .gitignore  README.md  agent.py  export.py  export2.py  improve.py  main.py  prompts.py  pyproject.toml  review.py  tools.json  workflow.py
backend/: run_server.py
backend/resource/: config.yaml
backend/src/agent/: graph.py  prompts.py  rag.py  state.py  tools.json  tools.py
backend/src/entity/: constants.py  r.py  stream_mes.py
backend/src/reviewer/: __init__.py  prompts.py  reviewer.py  scoring.py
backend/src/routers/: config.py  log.py  server.py  start.py  threadPool.py
backend/src/services/: agent_service.py  cache_service.py  logs_service.py  md_services.py
backend/src/utils/: queue_util.py  stream_mes_util.py
chroma_db/: chroma.sqlite3
exporter/: main.tex  mybib.bib  phdproposal.cls
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/assets/styles/: base.scss  theme.scss
frontend/src/common/: interfaces.ts
frontend/src/components/: AiMessagePanel.vue  BaseMessagePanel.vue  MarkdownRenderer.vue  QueryInput.vue  UserMessagePanel.vue
frontend/src/components/preview/: PreviewMd.vue  PreviewPdf.vue  Window.vue
frontend/src/request/: Api.ts  Request.ts  Ws.ts
frontend/src/stores/: HistoryStore.ts
frontend/src/utils/: stringUtil.ts
frontend/src/views/: MainView.vue
temp/: processed_Research_Proposal_大模型的推理优化_20250604_211547.md  refs.bib
