[project]
name = "proposalagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "arxiv>=2.2.0",
    "crossrefapi>=1.6.0",
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.19",
    "langgraph>=0.4.8",
    "pymupdf>=1.26.0",
    "reportlab>=4.4.1",
    "pyyaml>=6.0.2",
    "pyyaml>=6.0.2",
    "reportlab>=4.4.1",
    "sse-starlette>=2.3.6",
    "uvicorn>=0.34.3",
    "langchain-chroma>=0.1.2",
    "sentence-transformers>=3.0.1",
    "sse-starlette>=2.3.6",
    "uvicorn>=0.34.3",
    "uvicorn[standard]>=0.34.3",
    "httptools>=0.6.4",
    "config>=0.5.1",
    "scholarly>=1.7.11",
    "tavily-python>=0.7.6",
    "langchain-dashscope>=0.1.8",
]
